@@ -45,7 +45,7 @@ sub new
   my $strawberry_lddlflags;
   if($^O eq 'MSWin32' && $Config{myuname} =~ /strawberry-perl/ && $] >= 5.020)
   {
-    $args{build_requires}->{'Win32API::File'} = 0;
+    $args{build_requires}->{'Win32::ErrorMode'} = 0;
     
     # On Strawberry Perl (let me count the ways...) the c/lib directory gets 
     # inserted before the Alien::FFI -L directory, meaning if you do an
